--- a/src/index.html
+++ b/src/index.html
@@ -9,8 +9,7 @@
     />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Space+Mono&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Barlow&family=Fraunces&family=Rubik&Space+Mono&display=swap" rel="stylesheet">
     <title>Yizhi Mao</title>
   </head>
   <body>
